style.css
/* Author Petter Andersson */

/* Font Sizes */

.size1_text_small {
	font-size: 3pt;
}

.size1_text_medium {
	font-size: 6pt;
}

.size1_text_big {
	font-size: 10pt;
}

.size2_text_small {
	font-size: 7pt;
}

.size2_text_medium {
	font-size: 11pt;
}

.size2_text_big {
	font-size: 20pt;
}

.size3_text_small {
	font-size: 14pt;
}

.size3_text_medium {
	font-size: 20pt;
}

.size3_text_big {
	font-size: 40pt;
}

.text16 {
	font-size: 16pt;
}

.text32 {
	font-size: 32pt;
}

/* Text Change */

.bold {
    font-weight: bold;
}

.color_gray {
    color: grey;
}

.text_shadow {
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;  
}

/* HTML Element Sizes, cards */

.card {
	height: 228px;
    width: 128px;
}

.card_smaller {
	height: 114px;
    width: 64px;
}

.card_discard {
	height: 57px;
    width: 32px;
}

/* Card borders */

.card_treasure {
	border: chocolate;
    border-style: solid;
}

.card_victory {
	border: green;
    border-style: solid;
}

.card_action {
	border: blue;
    border-style: solid;
}

/* Containers */

.container {
    position: relative;
    text-align: center;
    color: white;
}

.card_container {
	display: inline-flex;
	flex-flow: row wrap;
}

.flex_container {
	display: flex;
	flex-flow: column wrap;
	justify-content: flex-start; 
	/*
	justify-content: center;
	align-items: center;
	*/
}

/* Specific containers - make these use generic instead TODO*/

.interact {
	display: flex;
	padding-right: 30px;
}

.info {
	display: flex;
	padding: 5px;
}

.info_child { /* TODO RENAME*/
	margin: 5px;
}

.info_stats_main {
	border-style: solid;
	border-color: black;
	border-width: 1px;
}

.border_bottom {
	border-bottom-style: solid;
	border-bottom-color: white;
	border-bottom-width: 1px;
}

.info_stats {
	background-color: darkslateblue;
}

.shopPanel {
	display: flex;
	padding: 5px;
	margin-right: 5px;
}

/* Scaleable positions*/

/* Centered text */
.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Centered text top*/
.size1_centered_top {
    position: absolute;
    top: 12px;
    left: 50%;
    transform: translate(-50%, -50%);
}

.size2_centered_top {
    position: absolute;
    top: 20px;
    left: 50%;
    transform: translate(-50%, -50%);
}

.size3_centered_top {
    position: absolute;
    top: 32px;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Bottom left text */
.size1_bottom_left {
    position: absolute;
    bottom: 8px;
    left: 4px;
}

.size2_bottom_left {
    position: absolute;
    bottom: 8px;
    left: 8px;
}

.size3_bottom_left {
    position: absolute;
    bottom: 8px;
    left: 12px;
}

/* Bottom right text */
.size1_bottom_right {
    position: absolute;
    bottom: 8px;
    right: 4px;
}

.size2_bottom_right {
    position: absolute;
    bottom: 8px;
    right: 8px;
}

.size3_bottom_right {
    position: absolute;
    bottom: 8px;
    right: 16px;
}

/* Margins */

.margin_bottom {
	margin-bottom: 30px;
}

.margin_bottom_5 {
	margin-bottom: 5px;
}

.margin_left {
	margin-left: 5px;
}

.margin_left_1 {
	margin-left: 1px;
}

.margin_left_2 {
	margin-left: 2px;
}

.margin_left_30 {
	margin-left: 30px;
}

.margin_top_2 {
	margin-top: 2px;
}

/* Buttons */

.normalButton {
	border: black;
    border-style: solid;
	height: 25px;
    width: 100px;
    margin-right: 5px;	
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000; 
    background-color: rgba(0, 0, 0, 0.7);
}

.bigButton {
	border: black;
    border-style: solid;
	height: 35px;
    width: 50px;
    margin-right: 5px;	
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000; 
    background-color: rgba(1, 1, 1, 0.7);
    font-weight: bold;
    font-size: 16pt;
}

.interactButton {
	border: black;
    border-style: solid;
    border-width: 4px;
	height: 50px;
    width: 140px;
    background-color: rgba(0, 0, 0, 0.75);
    font-weight: bold;
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000; 

}

/* Reusable 1-liners */

.inline {
	display: inline;
}

.position_relative {
	position: relative;
}

.position_absolute {
	position: absolute;
}

/* Specific Classes */

.shopText { /* Make it better aligned to button*/
	height: 25px;
}

.selected {
	border: yellow;
    border-style: solid;
}

.invis {
	display: none;
}

.inactive {
	filter: grayscale(100%);
}

.noclick {
	pointer-events: none
}

.outOfStock {
	/* TODO: Something to align image;*/
}

